--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,24 @@
-<p>home works!</p>
+<nav class="navbar navbar-dark bg-dark mb-5">
+  <a class="navbar-brand" href="/" style="text-align: center">Bank App</a>
+  <div class="navbar-expand" style="margin-left: auto">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" routerLink="/home">Home</a>
+      <a class="nav-item nav-link" routerLink="/login">Login</a>
+      <a class="nav-item nav-link" routerLink="/register">Register</a>
+      <a class="nav-item nav-link" routerLink="/bank">Banks</a>
+    </div>
+  </div>
+  <div class="navbar-expand ml-auto navbar-nav">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="https://github.com/sarathlalsaseendran" target="_blank">
+        <i class="fa fa-github"></i>
+      </a>
+      <a class="nav-item nav-link" href="https://twitter.com/sarathlalsasee1" target="_blank">
+        <i class="fa fa-twitter"></i>
+      </a>
+      <a class="nav-item nav-link" href="https://codewithsarath.com" target="_blank">
+        <i class="fa fa-wordpress"></i>
+      </a>
+    </div>
+  </div>
+</nav>
